Fix #109422: Assertion triggered when opening a new file and "Load UI" is disabled in settings.

Small inconsistency leftover from ebb5643e59, 32bbfbb06e and 7ef8389dad
commits.

Weirdly enough that was not a problem on Linux X11, but did cause
issues at leaast on Windows and Linux Wayland.